JumpScript/tests/baselines/reference/parserClassDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration2.jump(1,20): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration2.jump(1,22): error TS1175: 'implements' clause already seen.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration2.jump (2 errors) ====
    class C implements A implements B {
                       ~
!!! error TS2304: Cannot find name 'A'.
                         ~~~~~~~~~~
!!! error TS1175: 'implements' clause already seen.
    }